# meda-claw

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  MANIFESTO.md  README.md  pyproject.toml  setup.py
.github/workflows/: medaclaw-ci.yml
demo/vulnerable_repo/: README.md  auth.py  config.yaml
demo/vulnerable_repo/auth/: session.py
demo/vulnerable_repo/migrations/: 001_users.sql
meda_claw/: __init__.py  cli.py  policy.py
meda_claw/benchmarks/: __init__.py  proof_of_audit.py
meda_claw/core/: __init__.py  engine.py  findings.py  reviewer.py  scoring.py
meda_claw/policy/: __init__.py  governance_rules.json
meda_claw/scanners/: __init__.py  attribution.py  behavior.py  secrets.py
meda_claw/wrappers/: __init__.py
